src/test/ui/issues/issue-53787-inline-assembler-macro.stderr
error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/issue-53787-inline-assembler-macro.rs:21:16
   |
LL |     fake_jump!("FirstFunc");
   |                ^^^^^^^^^^^

error: aborting due to previous error

